# abcboost

./: .Rbuildignore  CMakeLists.WIN.txt  CMakeLists.txt  DESCRIPTION  NAMESPACE  R.Makefile  README.md  README_Chinese.md  WIN.Makefile  compile_py.sh  config.txt
R/: abcboost.R
data/: comp_cpu.test.csv  comp_cpu.test.libsvm  comp_cpu.train.csv  comp_cpu.train.libsvm  covtype.train.index.csv  mslr10k.test.query  mslr10k.train.query
matlab/linux/: abcboost_load.mexa64  abcboost_predict.mexa64  abcboost_save.mexa64  abcboost_test.mexa64  abcboost_train.mexa64  libsvmread.mexa64
matlab/mac_x86/: abcboost_load.mexmaci64  abcboost_predict.mexmaci64  abcboost_save.mexmaci64  abcboost_test.mexmaci64  abcboost_train.mexmaci64  libsvmread.mexmaci64
matlab/windows/: abcboost_load.mexw64  abcboost_predict.mexw64  abcboost_save.mexw64  abcboost_test.mexw64  abcboost_train.mexw64  libsvmread.mexw64
python/linux/: compile_mult_py.sh  compile_py.sh
python/mac_m1/: compile_py.sh
python/windows/: abcboost.pyd
src/: .map  Makevars  abcboost.py  clean_main.cpp  config.h  data.cpp  data.h  dummy_omp.h  map_main.cpp  model.cpp  model.h  model_gpu.cu  model_gpu.h  predict_main.cpp  python_wrapper.cpp  r_wrapper.cpp  train_main.cpp  tree.cpp  tree.h  utils.cu  utils.h
src/matlab/: Makefile  abcboost_load.cpp  abcboost_load.mexa64  abcboost_load.mexw64  abcboost_predict.cpp  abcboost_save.cpp  abcboost_save.mexa64  abcboost_save.mexw64  abcboost_test.cpp  abcboost_test.mexw64  abcboost_train.cpp  abcboost_train.mexa64  abcboost_train.mexw64  compile.m  compile_mult_thread.m  libsvmread.c  matlab_utils.h  test_letter.m  test_mnist.m
visualstudio/: abcboost.sln  clean.vcxproj  map.vcxproj  predict.vcxproj  train.vcxproj
